# The-Charter

./: CHARTER.md  GATE-PARTIAL-01 proposal.md  LICENSE  MACHINE_SPEC.md  OPEN_QUESTIONS.md  ORIGIN.md  README.md  We asked the leading LLM’s the following.md  charter-ab-01-prompts-draft.md  charter-ab-01-protocol.md  one-minute-read.md  triage-machine.tsx
charter-cpp/: CMakeLists.txt  main.cpp  proposals:2026-06-08-[Claude]-cpp-skeleton-review.md.txt  proposals:2026-06-08-[Grok]-cpp-skeleton-review.md.txt
charter-cpp/include/charter/: coherence_controller.h  fsm.h  gates.h  llm_interface.h  session_continuity.h  types.h
charter-cpp/src/: coherence_controller.cpp  fsm.cpp  gates.cpp  llm_interface.cpp  session_continuity.cpp  types.cpp
docs/: CHANGELOG.md  CharterV1.0.md  CharterV2.0  CharterV2.0.md  CharterV2.1  CharterV2.2.md  CharterV2.3.md  CharterV2.4.md  CharterV2.5.md  CharterV2.6.md  CharterV2.7.md  Charterv3.0.md  charter-machine-spec.tsx  charter-simulator.tsx  index.html  simulator.html
for-humans/: README.md  STATE.md  chatgpt.md  cpp-skeleton-review-prompt.md  gemini.md  generic-short.md  k1-diversify-enforcement-review.md  q1-resolution-prompt.md  review-cycle-2-prompt.md  review-prompt.md
proposals/: 2026-06-05-constitutional-principle-empirical-scope.md  2026-06-05-deepseek-g4-escape-hatch.md  2026-06-05-g5-mechanism-vs-existence.md  2026-06-05-gemini-coherence-controller-deadlock.md  2026-06-05-gemini-diversify-trigger-resolution.md  2026-06-05-gemini-evidence-hierarchy-e1-e2-operationalization.md  2026-06-05-gpt-5.5-mechanism-gate-overreach.md  (+39 more)
(+16 files in other folders)
